Fix a lot a inconsistensies, stuff not adhering to webstandards, make spacing smaller, remove unnescessary stuff.

--- a/sass/_logo.scss
+++ b/sass/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
   position: fixed;
-	top: 1rem;
-	left: 1rem;
+	top: 0.4rem;
+	left: 0.4rem;
   display: flex;
   align-items: center;
   background: var(--primary);
