--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0rem;
+  padding: 0rem;
   font-family: 'Google Sans', Inter, Roboto, 'Open Sans', sans-serif;
   font-size: 1rem;
   line-height: 1.54;
@@ -22,11 +22,6 @@ body {
     var(--surface_variant) 1rem
   );
   color: var(--on_background);
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -webkit-overflow-scrolling: touch;
-  -webkit-text-size-adjust: 100%;
-  font-feature-settings: "liga";
 }
 
 nav {
@@ -44,24 +39,12 @@ main {
   background-color: var(--background);
   border-radius: 1rem;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin-top: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  line-height: 1.3;
-
-  &:not(first-child) {
-    margin-top: 40px;
-  }
-
   .zola-anchor {
-    font-size: 1.5rem;
     visibility: hidden;
     margin-left: 0.5rem;
-    vertical-align: 1%;
-    text-decoration: none;
-    border-bottom-color: transparent;
-    cursor: pointer;
   }
 
   &:hover {
@@ -180,43 +163,33 @@ figure {
 
 code {
   font-family: 'Iosevka', Menlo, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
-  font-feature-settings: normal;
+  font-variant-ligatures: common-ligatures;
+  font-variant-numeric: slashed-zero;
   background: var(--secondary_container);
   color: var(--on_secondary_container);
-  padding: 1px 6px;
+  padding: 0.1rem;
   border-radius: 0.2em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin: 0 2px;
-  font-size: .95rem;
 }
 
 pre {
-  font-family: 'Iosevka', Menlo, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
-  font-feature-settings: "liga";
-  padding: 10px 10px;
-  font-size: .95rem;
+  padding: 0.4rem;
   overflow: auto;
   border-radius: 0.4em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
-  + pre {
-    border-top: 0;
-    margin-top: -40px;
-  }
-
-    code {
-      background: none !important;
-      margin: 0;
-      padding: 0;
-      font-size: inherit;
-      box-shadow : none;
+  code {
+    background: none !important;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
   }
 }
 
 blockquote {
-  border-left: 2px solid var(--outline);
+  border-left: 0.15rem solid var(--outline);
   margin: 0;
-  padding: 15px;
+  padding: 0.4rem;
 
   p:first-of-type {
     margin-top: 0;
@@ -224,10 +197,6 @@ blockquote {
 
   p:last-of-type {
     margin-bottom: 0;
-  }
-
-  p {
-    position: relative;
   }
 }
 
@@ -237,7 +206,7 @@ table {
 }
 
 table, th, td {
-  padding: 10px;
+  padding: 0.4rem;
 }
 
 tr:nth-child(even) {
@@ -255,28 +224,28 @@ ul, ol {
   padding: 0;
 
   li {
-      position: relative;
-      margin-top: 5px;
-      margin-bottom: 5px;
+    position: relative;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   ul, ol {
-      margin-top: 10px;
-      margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 0.4rem;
+  width: fit-content;
   max-width: 864px;
-  min-height: 100vh;
 
   &.full,
   &.center {
     border: none;
-    margin: 1.5rem auto;
+    margin: 2.9rem auto auto auto;
   }
 
   &.full {
